--- a/style.css
+++ b/style.css
@@ -8,8 +8,14 @@
     .TextPostion{
       position: absolute;
       right:0px;
-      left: 75px;
-      top:270px;
+      left: 0px;
+      top:0px;
+      height: 100vh;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 50px;
     }
     .link_prop{
       font-size:17px;
