--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
     }
     .TextPostion{
       position: absolute;
-      right:0px;
+      right: 0px;
       left: 0px;
-      top:0px;
+      top: 0px;
       height: 100vh;
       width: 50%;
       display: flex;
@@ -43,10 +43,13 @@
     }
 
     .product_img_size{
-      width: 220px;
-      height: 220px;
+      width: 180px;
+      height: 180px;
     }
 
+    .carddim{
+      padding: 40px;;
+    }
     .section_header{
       color:yellowgreen;
     }
@@ -143,15 +146,47 @@
       color: #fff;
       top: 5px;
     }
+
+    .card-img-top {
+      transition: transform 0.3s ease-in-out;
+    }
     
     .card-img-top:hover{
       transform: scale(1.2);
     }
 
-     @media screen and (max-width: 678px) {
+    @media screen and (max-width: 678px) {
       .TextPostion{
-        height:70vh;
+        display: none;
       }
+      .card-img-top:hover{
+        transform: none;
+      }
+  
     }
 
+    @media screen and (max-width: 575px) {
+      .navbar-collapse {
+        margin-top: 5px;
+        border: 2px solid;
+        border-radius: 5px;
+        background-color:rgb(59, 43, 43);
+        border-color: #f3fffe;
+      }
+
+      .navbar-collapse > ul >li{
+        border-bottom: 1px solid;
+        border-color: #32cdc6;
+      }
+
+      .navbar-collapse > ul > li:last-child{
+        border-bottom:  none;
+      }
+      .link_prop{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+    }
     
