--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@
     }
     .Card_title{
         color:gray;
+        display:inline-block;
+        white-space: nowrap;
+        overflow:hidden !important;
+        text-overflow: ellipsis;
     }
 
     .Card_devilery{
